--- a/toggle-spring-boot-starter/src/main/resources/feature-toggle-mgt.html
+++ b/toggle-spring-boot-starter/src/main/resources/feature-toggle-mgt.html
@@ -71,7 +71,8 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="" target="_blank">Examples</a>
+                    <a class="nav-link" href="https://github.com/greengerong/toggle/tree/master/samples"
+                       target="_blank">Examples</a>
                 </li>
             </ul>
             <ul class="navbar-nav my-2 my-lg-0">
