--- a/toggle-spring-boot-starter/src/main/resources/feature-toggle-mgt.html
+++ b/toggle-spring-boot-starter/src/main/resources/feature-toggle-mgt.html
@@ -43,13 +43,20 @@
             height: 1rem;
             vertical-align: text-top;
         }
+
+        .logo {
+            width: 36px;
+            height: 36px;
+        }
     </style>
 </head>
 <body>
 
 <header class="header">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Toggle</a>
+        <a class="navbar-brand" href="#">
+            <img class="logo" src="https://github.com/greengerong/toggle/blob/master/doc/toggle-live.png?raw=true"
+                 alt="Toggle"/></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
