--- a/toggle-spring-boot-starter/src/main/resources/feature-toggle-mgt.html
+++ b/toggle-spring-boot-starter/src/main/resources/feature-toggle-mgt.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Feature toggle</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon"
+          href="https://video.toggle.sg/image/5202944/16x9/947/533/8d9c5ac0f13f54d143ffebef0665695e/Ci/toggle-live.png">
 
     <style type="text/css">
         /** @formatter:off */
@@ -54,9 +56,7 @@
 
 <header class="header">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">
-            <img class="logo" src="https://github.com/greengerong/toggle/blob/master/doc/toggle-live.png?raw=true"
-                 alt="Toggle"/></a>
+        <a class="navbar-brand" href="#">Toggle</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
