--- a/toggle-spring-boot-starter/src/main/resources/feature-toggle-mgt.html
+++ b/toggle-spring-boot-starter/src/main/resources/feature-toggle-mgt.html
@@ -5,7 +5,7 @@
     <title>Feature toggle</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon"
-          href="https://video.toggle.sg/image/5202944/16x9/947/533/8d9c5ac0f13f54d143ffebef0665695e/Ci/toggle-live.png">
+          href="https://github.com/greengerong/toggle/blob/master/doc/toggle.png?raw=true">
 
     <style type="text/css">
         /** @formatter:off */
